--- a/FRONTEND/home.html
+++ b/FRONTEND/home.html
@@ -214,6 +214,7 @@
 
 </html>
 
+<!-- modales -->
 
 <div class="modal" style="font-family: 'Poppins',sans-serif;" id="modalLogin" tabindex="-1" role="dialog"
   aria-labelledby="modalLoginLabel" aria-hidden="true">
