ingenierias sin acento

--- a/FRONTEND/agregarProfesor.html
+++ b/FRONTEND/agregarProfesor.html
@@ -167,7 +167,7 @@
               Seleccionar departamento</option>
             <option value="humanidades">Humanidades</option>
             <option value="negocios">Negocios</option>
-            <option value="ingenierías">Ingeniería</option>
+            <option value="ingenierias">Ingeniería</option>
           </select>
           <br><br>
 
