vercion de presentacion

--- a/FRONTEND/perfiles.html
+++ b/FRONTEND/perfiles.html
@@ -116,7 +116,7 @@
     <!-- break de linea -->
     <p class="text-center" style="font-size: 30px; color: white"><strong>Comentarios</strong></p>
     <hr style="width:100%" , size="3" , color=black>
-    <!-- filtro de cursos -->
+    <!-- filtro de cursos 
     <div class="form-group">
       <label for="sel1" style="font-size: 30px;color: white">Cursos</label>
       <select class="form-control w-25" placeholder="Cursos:">
@@ -126,7 +126,7 @@
         <option>Curso 3</option>
       </select>
     </div>
-
+-->
     <!-- Comentarios -->
     <div id="comentarios"></div>
 
